<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_view_padding"
            android:layout_marginEnd="@dimen/card_view_padding"
            android:layout_marginTop="@dimen/card_view_padding"
            app:cardUseCompatPadding="true"
            android:background="?attr/cardBackgroundColor">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/cardBackgroundColor">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/contact_profile_image_view"
                    android:layout_width="@dimen/profile_image_view_size"
                    android:layout_height="@dimen/profile_image_view_size"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_top_double_more"
                    android:contentDescription="@string/contact_add_edit_profile_image_description"
                    android:src="@drawable/default_profile_1" />

                <ImageView
                    android:id="@+id/contact_profile_image_clickable"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="@dimen/profile_image_view_size"
                    android:layout_height="@dimen/profile_image_view_size"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_top_double_more"
                    android:contentDescription="@string/contact_add_edit_profile_image_description"
                    android:src="@drawable/custom_button_profile" />

            <!-- Name Elements Here -->

                <TextView
                    android:id="@+id/name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_add_edit_name_text_view"
                    android:textColor="?attr/textColor"
                    android:textSize="@dimen/label_text_size"
                    android:layout_marginStart="@dimen/margin_start_end"
                    android:layout_marginTop="@dimen/margin_top"
                    android:drawableStart="@drawable/ic_person_small"
                    android:drawablePadding="@dimen/margin_start_end"
                    android:layout_below="@id/contact_profile_image_view"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_text_view">

                    <EditText
                        android:id="@+id/first_name_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.45"
                        android:layout_marginStart="@dimen/margin_start_end"
                        android:layout_marginEnd="@dimen/margin_start_end"
                        android:hint="@string/contact_add_edit_first_name_hint"
                        android:textColor="?attr/textColor"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/last_name_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.55"
                        android:layout_marginEnd="@dimen/margin_start_end"
                        android:hint="@string/contact_add_edit_last_name_hint"
                        android:textColor="?attr/textColor"
                        android:inputType="text" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_view_padding"
            android:layout_marginEnd="@dimen/card_view_padding"
            android:layout_marginTop="@dimen/card_view_padding"
            android:background="?attr/cardBackgroundColor"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/cardBackgroundColor">

            <!-- Email Elements Here-->

                <TextView
                    android:id="@+id/email_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textColor"
                    android:textSize="@dimen/label_text_size"
                    android:layout_marginTop="@dimen/margin_top_more"
                    android:layout_marginStart="@dimen/margin_start_end"
                    android:drawableStart="@drawable/ic_email_small"
                    android:drawablePadding="@dimen/margin_start_end"
                    android:text="@string/contact_add_edit_email_text_view" />

                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_add_edit_email_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="?attr/textColor"
                    android:layout_marginStart="@dimen/margin_start_end"
                    android:layout_marginEnd="@dimen/margin_start_end"
                    android:layout_below="@id/email_text_view" />

            <!-- Phone Elements Here -->

                <TextView
                    android:id="@+id/phone_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_end"
                    android:layout_marginEnd="@dimen/margin_start_end"
                    android:layout_marginTop="@dimen/margin_top_double_more"
                    android:drawableStart="@drawable/ic_phone_small"
                    android:drawablePadding="@dimen/margin_start_end"
                    android:text="@string/contact_add_edit_phone_text_view"
                    android:textSize="@dimen/label_text_size"
                    android:textColor="?attr/textColor"
                    android:layout_below="@id/email_edit_text" />

                <EditText
                    android:id="@+id/home_phone_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginStart="@dimen/margin_start_end"
                    android:layout_marginEnd="@dimen/margin_start_end"
                    android:inputType="phone"
                    android:textColor="?attr/textColor"
                    android:hint="@string/contact_add_edit_home_phone_hint"
                    android:drawableStart="@drawable/ic_home_small"
                    android:drawablePadding="@dimen/margin_start_end"
                    android:layout_below="@id/phone_text_view" />

                <EditText
                    android:id="@+id/cell_phone_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginStart="@dimen/margin_start_end"
                    android:layout_marginEnd="@dimen/margin_start_end"
                    android:inputType="phone"
                    android:textColor="?attr/textColor"
                    android:hint="@string/contact_add_edit_cell_phone_hint"
                    android:drawableStart="@drawable/ic_smartphone_small"
                    android:drawablePadding="@dimen/margin_start_end"
                    android:layout_below="@id/home_phone_edit_text" />

                <EditText
                    android:id="@+id/work_phone_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginStart="@dimen/margin_start_end"
                    android:layout_marginEnd="@dimen/margin_start_end"
                    android:inputType="phone"
                    android:textColor="?attr/textColor"
                    android:hint="@string/contact_add_edit_work_phone_hint"
                    android:drawableStart="@drawable/ic_work_small"
                    android:drawablePadding="@dimen/margin_start_end"
                    android:layout_below="@id/cell_phone_edit_text" />


                <!-- Address Elements Here -->

                <TextView
                    android:id="@+id/address_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_end"
                    android:layout_marginEnd="@dimen/margin_start_end"
                    android:layout_marginTop="@dimen/margin_top_double_more"
                    android:drawableStart="@drawable/ic_location_city_small"
                    android:drawablePadding="@dimen/margin_start_end"
                    android:text="@string/contact_add_edit_address_text_view"
                    android:textSize="@dimen/label_text_size"
                    android:textColor="?attr/textColor"
                    android:layout_below="@id/work_phone_edit_text"/>

                <EditText
                    android:id="@+id/address_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_end"
                    android:layout_marginEnd="@dimen/margin_start_end"
                    android:layout_marginTop="@dimen/margin_top"
                    android:hint="@string/contact_add_edit_address_hint"
                    android:inputType="text"
                    android:textColor="?attr/textColor"
                    android:layout_below="@id/address_text_view"/>


            <!-- Birthday Elements Here -->

                <TextView
                    android:id="@+id/birthday_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_end"
                    android:layout_marginEnd="@dimen/margin_start_end"
                    android:layout_marginTop="@dimen/margin_top_double_more"
                    android:drawableStart="@drawable/ic_cake_small"
                    android:drawablePadding="@dimen/margin_start_end"
                    android:text="@string/contact_add_edit_birthday_text_view"
                    android:textSize="@dimen/label_text_size"
                    android:textColor="?attr/textColor"
                    android:layout_below="@id/address_edit_text"/>

                <TextView
                    android:id="@+id/birthday_date_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_end"
                    android:layout_marginTop="@dimen/margin_top_double_more"
                    android:layout_toEndOf="@id/birthday_text_view"
                    android:textSize="@dimen/label_text_size"
                    android:text="@string/contact_add_edit_birthday_default"
                    android:textStyle="italic"
                    android:textColor="?attr/textColor"
                    android:layout_below="@id/address_edit_text"/>

                <LinearLayout
                    android:id="@+id/birthday_date_picker_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_below="@id/birthday_text_view"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/birthday_date_picker_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start_end"
                        android:layout_marginTop="@dimen/margin_top"
                        android:layout_weight="6"
                        android:text="@string/contact_add_edit_birthday_button" />
                    <Button
                        android:id="@+id/birthday_date_clear_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start_end"
                        android:layout_marginEnd="@dimen/margin_start_end"
                        android:layout_marginTop="@dimen/margin_top"
                        android:text="@string/contact_add_edit_birthday_clear_button"
                        android:layout_weight="4" />

                </LinearLayout>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>